--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@
 
 # Test binary, build with `go test -c`
 *.test
-*.idea
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+.DS_Store
+**/.idea/
+.idea
+*.iml
